# chip-asia-rs

./: Cargo.toml  README.md
docs/plans/: 2026-02-25-cli-design.md  2026-02-25-cli-implementation.md
examples/: basic.rs
src/: client.rs  error.rs  lib.rs
src/api/: mod.rs  payment.rs  verify.rs
src/model/: bank_account.rs  client_details.rs  enums.rs  issuer_details.rs  mod.rs  payment_details.rs  payment_methods.rs  product.rs  purchase.rs  purchase_details.rs
tests/: api_tests.rs  cli_tests.rs
