[package]
name = "chip-sdk"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Rust SDK for CHIP payment gateway API (chip-in.asia)"
repository = "https://github.com/CHIPAsia/chip-rust-sdk"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["full", "test-util"] }
rand = "0.8"
